Cleanup readme. Complete patch extraction workflow. Include (untested) unzipping for g colab.

--- a/prithvi_v2_eo_300_tl_unet_seagrass.ipynb
+++ b/prithvi_v2_eo_300_tl_unet_seagrass.ipynb
@@ -105,9 +105,10 @@
    "source": [
     "# Download tuning dataset .bz2 from Google Drive and place in `dataset_path`` directory.\n",
     "dataset_path = \"data/tuning_patches\"\n",
-    "fname = \"seagrass_tuning_patches.bz2\"\n",
+    "fname = \"seagrass_tuning_patches.tar.bz2\"\n",
     "gdown.download(\n",
-    "    \"https://drive.google.com/uc?id=TODO_ADD_GOOGLE_DRIVE_FILE_ID\",\n",
+    "https://drive.google.com/file/d//view?usp=sharing    \n",
+    "    \"https://drive.google.com/uc?id=1VWl2mkTTAG3ih741n3S5UDUj71ygNKDp\",\n",
     "    os.path.join(dataset_path, fname),\n",
     "    quiet=False,\n",
     ")\n",
@@ -124,7 +125,10 @@
     "A tuning dataset should now be in the dataset_path directory.\n",
     "The dataset used is derived from the IMaRS SIMM Seagrasss Project.\n",
     "For methods to generate the patches, see the `py/generate_seagrass_patches.py` script in the repo.\n",
-    "The patches then need to be split into training and validation sets.\n",
+    "\n",
+    "\n",
+    "\n",
+    "The patches need to be split into training and validation sets.\n",
     "The sets are specified using a `.txt` file listing the patch file names for each set.\n",
     "Example `training_chips.txt`:\n",
     "\n",
