fix class call. + ln to stats calc.

--- a/prithvi_v2_eo_300_tl_unet_seagrass.ipynb
+++ b/prithvi_v2_eo_300_tl_unet_seagrass.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/7yl4r/nasa-prithvi-wetlands/blob/main/prithvi_v2_eo_300_tl_unet_seagrass.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 29,
       "id": "7009d02e",
@@ -558,6 +568,8 @@
         "from terratorch.datamodules.generic_pixel_wise_data_module import Normalize\n",
         "from terratorch.datamodules.utils import wrap_in_compose_is_list\n",
         "\n",
+        "# statistics calculated from patches using\n",
+        "# https://github.com/7yl4r/nasa-prithvi-wetlands/blob/main/py/calculate_chip_statistics.py\n",
         "MEANS = {\n",
         "    \"COASTAL BLUE\": 239.935709,\n",
         "    \"BLUE\": 234.500603,\n",
@@ -746,7 +758,7 @@
       },
       "outputs": [],
       "source": [
-        "datamodule = MultiTemporalCropClassificationDataModule(\n",
+        "datamodule = MultiTemporalSeagrassClassificationDataModule(\n",
         "    batch_size=batch_size,\n",
         "    num_workers=num_workers,\n",
         "    data_root=f\"{dataset_path}\",\n",
@@ -1113,7 +1125,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "base",
