+ (untested) download & classification on unseen image

--- a/prithvi_v2_eo_300_tl_unet_seagrass.ipynb
+++ b/prithvi_v2_eo_300_tl_unet_seagrass.ipynb
@@ -5869,37 +5869,221 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 1,
       "id": "388aa3db0dc07460",
       "metadata": {
         "id": "388aa3db0dc07460",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 217
         },
-        "outputId": "d6dbc924-656a-44d2-c888-5b6f208ceac2"
+        "outputId": "2d94edbd-d324-4f4a-83b7-587a383f1433"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Downloading...\n",
-            "From (original): https://drive.google.com/uc?id=1cO5a9PmV70j6mvlTc8zH8MnKsRCGbefm\n",
-            "From (redirected): https://drive.google.com/uc?id=1cO5a9PmV70j6mvlTc8zH8MnKsRCGbefm&confirm=t&uuid=9189f0f6-8502-463e-b682-0a9707627130\n",
-            "To: /content/multicrop_best-epoch=76.ckpt\n",
-            "100%|██████████| 2.18G/2.18G [01:05<00:00, 33.1MB/s]\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'checkpoint_callback' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-1789466.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Get the best checkpoint path from the callback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mbest_ckpt_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheckpoint_callback\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbest_model_path\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Best checkpoint: {best_ckpt_path}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Best metric value: {checkpoint_callback.best_model_score}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'checkpoint_callback' is not defined"
           ]
         }
       ],
       "source": [
-        "best_ckpt_path = \"../output/multicrop/checkpoints/best-epoch=00.ckpt\"\n",
+        "# Get the best checkpoint path from the callback\n",
+        "best_ckpt_path = checkpoint_callback.best_model_path\n",
         "\n",
-        "# Download best model checkpoint fine-tuned on full dataset\n",
-        "best_ckpt_100_epoch_path = \"multicrop_best-epoch=76.ckpt\"\n",
+        "print(f\"Best checkpoint: {best_ckpt_path}\")\n",
+        "print(f\"Best metric value: {checkpoint_callback.best_model_score}\")\n",
         "\n",
-        "if not os.path.isfile(best_ckpt_100_epoch_path):\n",
-        "    gdown.download(\"https://drive.google.com/uc?id=1cO5a9PmV70j6mvlTc8zH8MnKsRCGbefm\")"
+        "# Calculate test metrics using the best checkpoint\n",
+        "trainer.test(model, datamodule=datamodule, ckpt_path=best_ckpt_path)\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "At this point you may want to download the best checkpoint using the colab file browser for later use.\n",
+        "This checkpoint contains the fine-tuned model that can be used to generate predictions, and compute inference on specific images.\n",
+        "Refer to [this claude discussion for suggestions](https://claude.ai/share/8b822214-b113-46ef-986f-7f7e76ae5e95).\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "qPKq7ByXmJyf"
+      },
+      "id": "qPKq7ByXmJyf"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## an attempt to classify a new area not in the training/validation data\n",
+        "# =======================================================================\n",
+        "# === Download image to run classifier model on\n",
+        "# =======================================================================\n",
+        "from google.colab import drive\n",
+        "import os\n",
+        "import shutil\n",
+        "\n",
+        "# assume drive already mounted\n",
+        "# drive.mount('/content/drive')\n",
+        "\n",
+        "dataset_path = \"data\"\n",
+        "fname = \"20240923_163729_54_251b_3B_AnalyticMS_SR_8b_harmonized.tif\"\n",
+        "\n",
+        "# Path to your file in Google Drive (adjust this to match your file's location)\n",
+        "drive_file_path = \"/content/drive/MyDrive/20240923_163729_54_251b_3B_AnalyticMS_SR_8b_harmonized.tif\"\n",
+        "\n",
+        "# assume path already exists\n",
+        "# os.makedirs(dataset_path, exist_ok=True)\n",
+        "\n",
+        "# Copy file from Drive to local Colab storage\n",
+        "input_image_path = os.path.join(dataset_path, fname)\n",
+        "shutil.copy(drive_file_path, input_image_path)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# =======================================================================\n",
+        "# === run the model on the unseen image\n",
+        "# =======================================================================\n",
+        "\n",
+        "import torch\n",
+        "import rioxarray\n",
+        "import xarray as xr\n",
+        "import numpy as np\n",
+        "from pathlib import Path\n",
+        "\n",
+        "def predict_new_image(model_checkpoint_path, input_image_path, output_path,\n",
+        "                      bands=None, time_steps=3):\n",
+        "    \"\"\"\n",
+        "    Apply trained model to a new multi-temporal image.\n",
+        "\n",
+        "    Args:\n",
+        "        model_checkpoint_path: Path to saved model checkpoint\n",
+        "        input_image_path: Path to input multi-temporal GeoTIFF\n",
+        "        output_path: Path to save classification output\n",
+        "        bands: List of band names matching training data\n",
+        "        time_steps: Number of time steps (default: 3)\n",
+        "    \"\"\"\n",
+        "\n",
+        "    if bands is None:\n",
+        "        bands = [\n",
+        "            \"COASTAL BLUE\", \"BLUE\", \"GREEN I\", \"GREEN II\",\n",
+        "            \"YELLOW\", \"RED\", \"RED-EDGE\", \"NEAR-INFRARED\"\n",
+        "        ]\n",
+        "\n",
+        "    # Load model\n",
+        "    model = terratorch.tasks.SemanticSegmentationTask.load_from_checkpoint(\n",
+        "        model_checkpoint_path,\n",
+        "        map_location='cuda' if torch.cuda.is_available() else 'cpu'\n",
+        "    )\n",
+        "    model.eval()\n",
+        "\n",
+        "    # Load and preprocess image\n",
+        "    image = rioxarray.open_rasterio(input_image_path, masked=True)\n",
+        "\n",
+        "    # Handle no-data values\n",
+        "    image = image.fillna(0)  # Match training preprocessing\n",
+        "\n",
+        "    # Convert to numpy and rearrange dimensions\n",
+        "    image_np = image.to_numpy()\n",
+        "\n",
+        "    # Expected shape: (channels, time, H, W) or (channels*time, H, W)\n",
+        "    # Rearrange to: (channels, time, H, W)\n",
+        "    from einops import rearrange\n",
+        "    if image_np.shape[0] == len(bands) * time_steps:\n",
+        "        image_np = rearrange(image_np, '(c t) h w -> c t h w', c=len(bands), t=time_steps)\n",
+        "\n",
+        "    # Normalize using training statistics\n",
+        "    means = np.array([MEANS[b] for b in bands])\n",
+        "    stds = np.array([STDS[b] for b in bands])\n",
+        "\n",
+        "    # Normalize: (C, T, H, W)\n",
+        "    for c in range(len(bands)):\n",
+        "        image_np[c] = (image_np[c] - means[c]) / stds[c]\n",
+        "\n",
+        "    # Convert to tensor and add batch dimension\n",
+        "    image_tensor = torch.from_numpy(image_np).float()\n",
+        "    image_tensor = image_tensor.unsqueeze(0).to(model.device)\n",
+        "\n",
+        "    print(f\"Input shape: {image_tensor.shape}\")\n",
+        "\n",
+        "    # Generate prediction\n",
+        "    with torch.no_grad():\n",
+        "        output = model(image_tensor)\n",
+        "        prediction = output['output'].argmax(dim=1).squeeze(0).cpu().numpy()\n",
+        "\n",
+        "    print(f\"Prediction shape: {prediction.shape}\")\n",
+        "    print(f\"Unique classes: {np.unique(prediction)}\")\n",
+        "\n",
+        "    # Create georeferenced output\n",
+        "    pred_da = xr.DataArray(\n",
+        "        prediction[np.newaxis, :, :],\n",
+        "        coords={\n",
+        "            'band': [1],\n",
+        "            'y': image.y,\n",
+        "            'x': image.x\n",
+        "        },\n",
+        "        dims=['band', 'y', 'x'],\n",
+        "        attrs={\n",
+        "            'long_name': 'Seagrass Classification',\n",
+        "            'class_0': 'Non-Seagrass',\n",
+        "            'class_1': 'Seagrass'\n",
+        "        }\n",
+        "    )\n",
+        "\n",
+        "    # Copy georeferencing\n",
+        "    pred_da = pred_da.rio.write_crs(image.rio.crs)\n",
+        "    pred_da = pred_da.rio.write_transform(image.rio.transform())\n",
+        "\n",
+        "    # Save\n",
+        "    pred_da.rio.to_raster(output_path, dtype='uint8')\n",
+        "\n",
+        "    print(f\"✓ Saved classification to: {output_path}\")\n",
+        "\n",
+        "    return prediction\n",
+        "\n",
+        "# Usage for a new area\n",
+        "prediction = predict_new_image(\n",
+        "    model_checkpoint_path=best_ckpt_path,\n",
+        "    input_image_path=input_image_path,\n",
+        "    output_path=\"../output/20240923_163729_54_251b_3B_AnalyticMS_SR_8b_harmonized_prithvi_classification.tif\"\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "mtUq7jjlmFbi"
+      },
+      "id": "mtUq7jjlmFbi",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "TcMxJRODt0W7"
+      },
+      "id": "TcMxJRODt0W7"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "-------------------------\n",
+        "\n",
+        "-------------------------\n",
+        "\n",
+        "-------------------------"
+      ],
+      "metadata": {
+        "id": "p4NUWfaqncwi"
+      },
+      "id": "p4NUWfaqncwi"
     },
     {
       "cell_type": "code",
