--- a/notebooks/prithvi_v2_eo_300_tl_unet_mangrove.ipynb
+++ b/notebooks/prithvi_v2_eo_300_tl_unet_mangrove.ipynb
@@ -7,12 +7,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/7yl4r/nasa-prithvi-wetlands/blob/main/prithvi_v2_eo_300_tl_unet_seagrass.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/7yl4r/nasa-prithvi-wetlands/blob/main/notebooks/prithvi_v2_eo_300_tl_unet_mangrove.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "7009d02e",
       "metadata": {
         "id": "7009d02e"
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "5ca9883e",
       "metadata": {
         "colab": {
@@ -185,7 +185,7 @@
         "#!pip install -e . | tail -n 7\n",
         "\n",
         "# install directly becausea gcolab does not have access to the pyproject.toml\n",
-        "!pip install terratorch~=1.2"
+        "!pip install -q terratorch~=1.2"
       ]
     },
     {
@@ -226,7 +226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "2e8c1961-311b-49e0-b6ea-2867b44cb47a",
       "metadata": {
         "id": "2e8c1961-311b-49e0-b6ea-2867b44cb47a",
@@ -265,7 +265,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "c14cbc6b",
       "metadata": {
         "colab": {
@@ -343,10 +343,10 @@
         "\n",
         "# Set paths\n",
         "dataset_path = \"data/tuning_patches\"\n",
-        "fname = \"seagrass_tuning_patches.tar.bz2\"\n",
+        "fname = \"TTI_mangrove_tuning_patches.tar.bz2\"\n",
         "\n",
         "# Path to your file in Google Drive (adjust this to match your file's location)\n",
-        "drive_file_path = \"/content/drive/MyDrive/seagrass_tuning_patches.tar.bz2\"\n",
+        "drive_file_path = f\"/content/drive/MyDrive/{fname}\"\n",
         "\n",
         "# Create destination directory if it doesn't exist\n",
         "os.makedirs(dataset_path, exist_ok=True)\n",
@@ -400,7 +400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "c4517aab",
       "metadata": {
         "id": "c4517aab"
@@ -440,7 +440,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "ddd7d83440895e87",
       "metadata": {
         "colab": {
@@ -474,7 +474,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "ecd1487c",
       "metadata": {
         "id": "ecd1487c"
@@ -534,17 +534,20 @@
         "    Based onhttps://github.com/terrastackai/terratorch/blob/main/terratorch/datasets/multi_temporal_crop_classification.py\n",
         "    \"\"\"\n",
         "\n",
+        "    # sentinel 2 MULTICROP_EXTENDED_BAND_SET\n",
         "    all_band_names = (\n",
-        "        \"COASTAL BLUE\",\n",
         "        \"BLUE\",\n",
-        "        \"GREEN I\",\n",
-        "        \"GREEN II\",\n",
-        "        \"YELLOW\",\n",
+        "        \"GREEN\",\n",
         "        \"RED\",\n",
-        "        \"RED-EDGE\",\n",
-        "        \"NEAR-INFRARED\"\n",
+        "        \"RED_EDGE\",\n",
+        "        \"RED_EDGE_2\",\n",
+        "        \"NIR\",\n",
+        "        \"SWIR\",\n",
+        "        \"SWIR_2\"\n",
         "    )\n",
         "\n",
+        "\n",
+        "# TODO: CONTINUE\n",
         "\n",
         "    class_names = (\n",
         "        \"Non-Seagrass\",\n",
@@ -998,12 +1001,12 @@
         "id": "nS9FSZZn5vl8"
       },
       "id": "nS9FSZZn5vl8",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "735803b1-a4bf-427f-a1e6-5ac755af33fc",
       "metadata": {
         "id": "735803b1-a4bf-427f-a1e6-5ac755af33fc"
@@ -1030,7 +1033,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "2af2190c",
       "metadata": {
         "id": "2af2190c"
@@ -1043,7 +1046,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "4fdd71a0",
       "metadata": {
         "colab": {
@@ -1070,7 +1073,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "a87ed3b7-f7dc-486d-ac59-cd781a070925",
       "metadata": {
         "id": "a87ed3b7-f7dc-486d-ac59-cd781a070925",
@@ -1114,7 +1117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "08644e71-d82f-426c-b0c1-79026fccb578",
       "metadata": {
         "id": "08644e71-d82f-426c-b0c1-79026fccb578",
@@ -1143,7 +1146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "88b86821-3481-4d92-bdba-246568c66c48",
       "metadata": {
         "id": "88b86821-3481-4d92-bdba-246568c66c48",
@@ -1178,7 +1181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "9264de41-ab16-43cc-9ea2-ee51b0969624",
       "metadata": {
         "id": "9264de41-ab16-43cc-9ea2-ee51b0969624",
@@ -1221,7 +1224,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1250,7 +1253,7 @@
         }
       },
       "id": "Yna2IsIp-Y8P",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1271,12 +1274,12 @@
         "id": "F4Vz-j2v1Hz9"
       },
       "id": "F4Vz-j2v1Hz9",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "3a1da2ad-a797-4f4a-ad1a-cd10f9addb01",
       "metadata": {
         "id": "3a1da2ad-a797-4f4a-ad1a-cd10f9addb01",
@@ -1346,7 +1349,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "b7062ddc-a3b7-4378-898c-41abcdf2ee3b",
       "metadata": {
         "id": "b7062ddc-a3b7-4378-898c-41abcdf2ee3b",
@@ -1375,7 +1378,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "ede1c1c6-9f60-4510-a2da-572c55d03f79",
       "metadata": {
         "id": "ede1c1c6-9f60-4510-a2da-572c55d03f79",
@@ -1417,7 +1420,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "ae69d39a-857a-4392-b058-0f4b518edf6e",
       "metadata": {
         "id": "ae69d39a-857a-4392-b058-0f4b518edf6e",
@@ -1553,7 +1556,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "27fee1e72be7349",
       "metadata": {
         "id": "27fee1e72be7349",
@@ -1682,7 +1685,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "388aa3db0dc07460",
       "metadata": {
         "id": "388aa3db0dc07460",
@@ -2140,7 +2143,7 @@
         "outputId": "6294f36d-cdec-4985-c1b6-4bb2286e69c5"
       },
       "id": "mtUq7jjlmFbi",
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2298,7 +2301,7 @@
         "outputId": "46145ef1-5f1c-4602-afa2-b9781720234d"
       },
       "id": "C38MkfFj8PGG",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2401,7 +2404,7 @@
         "outputId": "9831a4b7-dbee-47be-fe6a-28e46bc95c00"
       },
       "id": "6v8ni_qw8N8L",
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2445,7 +2448,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "8f6c4b0d",
       "metadata": {
         "id": "8f6c4b0d"
@@ -2458,7 +2461,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "62920a2a",
       "metadata": {
         "id": "62920a2a"
@@ -2471,7 +2474,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "22dfc723",
       "metadata": {
         "id": "22dfc723"
@@ -2506,7 +2509,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "id": "2553ddcb",
       "metadata": {
         "id": "2553ddcb"
@@ -2522,7 +2525,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "id": "bdbf05ebc81b9998",
       "metadata": {
         "id": "bdbf05ebc81b9998"
